typescript-client-generated/v1.2.1/docs/NoteListItem.md

# NoteListItem

Summary information for Note in list responses

## Properties

Name | Type
------------ | -------------
`name` | string
`description` | string
`metadata` | [Array&lt;Metadata&gt;](Metadata.md)
`id` | string
`created_at` | Date
`modified_at` | Date
`include_in_report` | boolean

## Example

```typescript
import type { NoteListItem } from '@tmiclient/client'

// TODO: Update the object below with actual values
const example = {
  "name": null,
  "description": null,
  "metadata": null,
  "id": null,
  "created_at": null,
  "modified_at": null,
  "include_in_report": null,
} satisfies NoteListItem

console.log(example)

// Convert the instance to a JSON string
const exampleJSON: string = JSON.stringify(example)
console.log(exampleJSON)

// Parse the JSON string back to an object
const exampleParsed = JSON.parse(exampleJSON) as NoteListItem
console.log(exampleParsed)
```

[[Back to top]](#) [[Back to API list]](../README.md#api-endpoints) [[Back to Model list]](../README.md#models) [[Back to README]](../README.md)


